Fixed alignment of Landing Page Carousel

--- a/client/src/components/LandingPage/css/AniCard.css
+++ b/client/src/components/LandingPage/css/AniCard.css
@@ -1,4 +1,4 @@
 .makeStyles-root-6 {
     max-width: 345px;
-    height: 44vh!important;
+    height: 54h!important;
 }
